[package]
name = "rusty-hero"
version = "0.1.0"
authors = ["Andreas Rånman <rondreas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.2.1"

[build-dependencies]
windows = "0.2.1"